# ai-agent-rag

./: .gitignore  main.py  pyproject.toml  requirements.txt  run.py  test.py
agents/supervisor/: __init__.py  executor.py  generate_final_output.py  intent_classifier.py  planner.py  state.py  supervisor_agent.py  utils.py
agents/tools/: document_agent.py  drafter_agent.py  legal_agent.py
agents/tools/legal_agent/: generator.py  pipeline.py  query_expander.py  query_processor.py  reranker.py  retriver.py  test.py  tool.py
backend/: main.py
frontend/: app.py
shared/: __init__.py  llm.py  models.py  prompts.py
